Fix compilation after merge - HTML is non functional