@@ -4,6 +4,7 @@ import com.shelach.orders.data.Order;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -16,9 +17,9 @@ import java.util.List;
 public class FetchOrdersService {
     public List<Order> getProducts(String customerName) {
         log.info("Fetching products for customer {}", customerName);
-        return List.of(
-                new Order("עגבניות", "TOMATOES", 0, 4.3),
-                new Order("מלפפונים", "Cucumbers", 0, 2D)
+        return Arrays.asList(
+                new Order("ירקות", "עגבניות", "TOMATOES", 0, 4.3),
+                new Order("ירקות", "מלפפונים", "Cucumbers", 0, 2D)
         );
     }
 }
